# src/detection/detection.controller.ts
@@ -2,6 +2,7 @@ import {
   Body,
   Controller,
   Get,
+  Param,
   Patch,
   Post,
   Query,
@@ -10,8 +11,8 @@ import {
 import { CreateDetectionDTO } from './dto/create-detection.dto';
 import { DetectionEventService } from './services/detection-event.service';
 import { DetectionResponse } from 'src/common/types';
-import { PatchDetectionDTO } from './dto/patch-detection.dto';
 import { EcdsaAuthGuard } from '../auth/middleware/ecdsa-auth.guard';
+import { PatchDetectionDTO } from './dto/patch-detection.dto';
 
 @Controller('detection')
 export class DetectionController {
@@ -38,12 +39,28 @@ export class DetectionController {
     return this.detectionEventService.find(limit, from, to);
   }
 
-  @Patch()
+  @Get(':id')
+  @UseGuards(EcdsaAuthGuard)
+  async getDetectionEventById(
+    @Param('id') id: string,
+  ): Promise<DetectionResponse> {
+    const event = await this.detectionEventService.findById(id);
+    return {
+      data: event,
+      message: 'Detection event retrieved successfully!',
+    };
+  }
+
+  @Patch(':id')
   @UseGuards(EcdsaAuthGuard)
   async updateCrowDetectedEvent(
+    @Param('id') id: string,
     @Body() patchDetectionDTO: PatchDetectionDTO,
   ): Promise<DetectionResponse> {
-    const event = await this.detectionEventService.update(patchDetectionDTO);
+    const event = await this.detectionEventService.update(
+      id,
+      patchDetectionDTO,
+    );
     return {
       data: event,
       message: 'Detection event updated successfully!',
